force-app/main/default/objects/accessnow__ACNW_Request__c/accessnow__ACNW_Request__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>