force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Actual_End_Time__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Actual_End_Time__c</fullName>
    <label>Actual End Time</label>
    <type>DateTime</type>
</CustomField>