force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Approved_On__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Approved_On__c</fullName>
    <label>Approved On</label>
    <type>DateTime</type>
</CustomField>