force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Auto_Retry_On__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Auto_Retry_On__c</fullName>
    <label>Auto Retry On</label>
    <type>DateTime</type>
</CustomField>