force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Duration_Hours__c</fullName>
    <label>Duration (Hours)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.05</fullName>
                <default>true</default>
                <label>.05</label>
            </value>
            <value>
                <fullName>0.1</fullName>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>