force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Email_of_user__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Email_of_user__c</fullName>
    <label>Email of user</label>
    <type>Email</type>
</CustomField>