force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Last_Error__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Last_Error__c</fullName>
    <label>Last Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>