force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Manually_Revoked__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Manually_Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Revoked</label>
    <type>Checkbox</type>
</CustomField>