force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Original_Permission_Set_Ids__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Original_Permission_Set_Ids__c</fullName>
    <label>Original Permission Set Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>