force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Original_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Original_Profile_Id__c</fullName>
    <label>Original Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>