force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Provision_Immediately__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Provision_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provision Immediately</label>
    <type>Checkbox</type>
</CustomField>