force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Reason_for_Escalation__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Reason_for_Escalation__c</fullName>
    <label>Reason for Escalation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>