force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Reference_Number__c</fullName>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>