force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Request_on_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Request_on_Behalf_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request on Behalf Of</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>