force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Requested_End_Time__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Requested_End_Time__c</fullName>
    <formula>accessnow__Requested_Start_Time__c + value(text(accessnow__Duration_Hours__c)) / 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested End Time</label>
    <type>DateTime</type>
</CustomField>