force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Requested_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Requested_Start_Time__c</fullName>
    <label>Requested Start Time</label>
    <type>DateTime</type>
</CustomField>