force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__Requires_Approval_Rollup__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Requires_Approval_Rollup__c</fullName>
    <description>Rollup to have sum of the permissions selected with approval required flag checked</description>
    <inlineHelpText>Rollup to have sum of the permissions selected with approval required flag checked</inlineHelpText>
    <label>Requires Approval Rollup</label>
    <summarizedField>accessnow__ACNW_Request_Permission__c.accessnow__Requires_Approval_Value__c</summarizedField>
    <summaryForeignKey>accessnow__ACNW_Request_Permission__c.accessnow__Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>