force-app/main/default/objects/accessnow__ACNW_Request__c/fields/accessnow__TRVP__c.field-meta.xml
<CustomField>
    <fullName>accessnow__TRVP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRVP</label>
    <type>Checkbox</type>
</CustomField>