force-app/main/default/objects/accessnow__ACNW_Request__c/validationRules/accessnow__Duration_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>accessnow__Duration_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval(accessnow__Duration_Hours__c,&#39;&#39;) || value(text(accessnow__Duration_Hours__c)) &lt;= 0</errorConditionFormula>
    <errorDisplayField>accessnow__Duration_Hours__c</errorDisplayField>
    <errorMessage>Duration is required</errorMessage>
</ValidationRule>