force-app/main/default/objects/accessnow__ACNW_Request__c/validationRules/accessnow__Requested_end_time_must_be_after_start_t.validationRule-meta.xml
<ValidationRule>
    <fullName>accessnow__Requested_end_time_must_be_after_start_t</fullName>
    <active>true</active>
    <errorConditionFormula>accessnow__Requested_End_Time__c &lt;=  accessnow__Requested_Start_Time__c</errorConditionFormula>
    <errorMessage>Requested end time must be after start time</errorMessage>
</ValidationRule>