force-app/main/default/objects/accessnow__ACNW_Request__c/validationRules/accessnow__requested_time_required.validationRule-meta.xml
<ValidationRule>
    <fullName>accessnow__requested_time_required</fullName>
    <active>true</active>
    <errorConditionFormula>isblank(accessnow__Requested_Start_Time__c) &amp;&amp; !accessnow__Provision_Immediately__c</errorConditionFormula>
    <errorMessage>Requested Start Time is required if not set to Provision Immediately</errorMessage>
</ValidationRule>