force-app/main/default/objects/accessnow__ACNW_Request__c/listViews/accessnow__All_Requests.listView-meta.xml
<ListView>
    <fullName>accessnow__All_Requests</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>accessnow__Reference_Number__c</columns>
    <columns>accessnow__Reason_for_Escalation__c</columns>
    <columns>accessnow__Status__c</columns>
    <columns>accessnow__Requested_Start_Time__c</columns>
    <columns>accessnow__Actual_Start_Time__c</columns>
    <columns>accessnow__Requested_End_Time__c</columns>
    <columns>accessnow__Actual_End_Time__c</columns>
    <columns>accessnow__Approved_On__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>accessnow__Requires_Approval_Rollup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests</label>
</ListView>