force-app/main/default/objects/accessnow__ACNW_Request__c/listViews/accessnow__All_Requests_in_Future.listView-meta.xml
<ListView>
    <fullName>accessnow__All_Requests_in_Future</fullName>
    <columns>NAME</columns>
    <columns>accessnow__Reference_Number__c</columns>
    <columns>accessnow__Reason_for_Escalation__c</columns>
    <columns>accessnow__Requested_Start_Time__c</columns>
    <columns>accessnow__Requested_End_Time__c</columns>
    <columns>accessnow__Duration_Hours__c</columns>
    <columns>accessnow__Approved_On__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>accessnow__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>accessnow__Requested_Start_Time__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>All Requests in Future</label>
</ListView>