force-app/main/default/objects/accessnow__ACNW_Request__c/listViews/accessnow__My_In_Progress_Requests.listView-meta.xml
<ListView>
    <fullName>accessnow__My_In_Progress_Requests</fullName>
    <columns>NAME</columns>
    <columns>accessnow__Reference_Number__c</columns>
    <columns>accessnow__Reason_for_Escalation__c</columns>
    <columns>accessnow__Status__c</columns>
    <columns>accessnow__Requested_Start_Time__c</columns>
    <columns>accessnow__Actual_Start_Time__c</columns>
    <columns>accessnow__Requested_End_Time__c</columns>
    <columns>accessnow__Actual_End_Time__c</columns>
    <columns>accessnow__Approved_On__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>accessnow__Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>My In Progress Requests</label>
</ListView>